package persistence.fileImplementation;

import domain.*;
import persistence.interfaces.UnitOfWork;
import shared.logging.Logger;
import shared.logging.LoggerLevel;

import java.io.IOException;
import java.math.BigDecimal;
import java.nio.file.Files;
import java.nio.file.Path;
import java.nio.file.Paths;
import java.time.Instant;
import java.util.ArrayList;
import java.util.List;
import java.util.UUID;
import java.util.function.Function;

public class FileUnitOfWork implements UnitOfWork
{
  private final Path dataDirectory;
  private List<OwnedStock> ownedStocks;
  private List<Portfolio> portfolios;
  private List<Stock> stocks;
  private List<StockPriceHistory> stockPriceHistories;
  private List<Transaction> transactions;

  private static final Object FILE_WRITE_LOCK = new Object();

  public FileUnitOfWork(String directoryPath)
  {
    this.dataDirectory = Path.of(directoryPath).normalize();
    ensureFilesExist();
  }

  List<Stock> getStocks()
  {
    if (stocks == null) loadStocks();
    return stocks;
  }

  List<OwnedStock> getOwnedStocks()
  {
    if (ownedStocks == null) loadOwnedStocks();
    return ownedStocks;
  }

  List<Portfolio> getPortfolios()
  {
    if (portfolios == null) loadPortfolios();
    return portfolios;
  }

  List<StockPriceHistory> getStockPriceHistories()
  {
    if (stockPriceHistories == null) loadStockPriceHistories();
    return stockPriceHistories;
  }

  List<Transaction> getTransactions()
  {
    if (transactions == null) loadTransactions();
    return transactions;
  }

  @Override public void begin()
  {
    clearData();
  }

  @Override public void commit()
  {
    synchronized (FILE_WRITE_LOCK)
    {
      if (stocks != null)
      {
        List<String> lines = new ArrayList<>();
        for (Stock stock : stocks)
        {
          lines.add(stockToPSV(stock));
        }
        writeAllLines(dataDirectory.resolve("stocks.txt"), lines);
      }

      if (ownedStocks != null)
      {
        List<String> lines = new ArrayList<>();
        for (OwnedStock ownedStock : ownedStocks) {
          lines.add(ownedStockToPSV(ownedStock));
        }
        writeAllLines(dataDirectory.resolve("ownedStocks.txt"), lines);
      }

      if (portfolios != null)
      {
        List<String> lines = new ArrayList<>();
        for (Portfolio portfolio : portfolios) {
          lines.add(portfolioToPSV(portfolio));
        }
        writeAllLines(dataDirectory.resolve("portfolios.txt"), lines);
      }

      if (stockPriceHistories != null)
      {
        List<String> lines = new ArrayList<>();
        for (StockPriceHistory history : stockPriceHistories) {
          lines.add(stockPriceHistoriesToPSV(history));
        }
        writeAllLines(dataDirectory.resolve("stockPriceHistories.txt"), lines);
      }

      if (transactions != null)
      {
        List<String> lines = new ArrayList<>();
        for (Transaction transaction : transactions) {
          lines.add(transactionsToPSV(transaction));
        }
        writeAllLines(dataDirectory.resolve("transactions.txt"), lines);
      }
    }

    clearData();
  }

  @Override public void rollback()
  {
    clearData();
  }
  
  private List<String> readAllLines(Path filePath)
  {
    try
    {
      return Files.readAllLines(filePath);
    }
    catch(IOException e)
    {
      Logger.getInstance().log(LoggerLevel.ERROR, "Failed to read from file: " + filePath, e);
      throw new RuntimeException("Failed to read from file: " + filePath, e);
    }
  }

  private void writeAllLines(Path filePath, List<String> lines)
  {
    try
    {
      Files.write(filePath, lines);
    }
    catch (IOException e)
    {
      Logger.getInstance().log(LoggerLevel.ERROR, "Failed to write to file: " + filePath, e);
      throw new RuntimeException("Failed to write to file: " + filePath, e);
    }
  }

  private String stockToPSV(Stock stock)
  {
    return
        stock.getSymbol() + "|" +
        stock.getCurrentState() + "|" +
        stock.getCurrentPrice();
  }

  private String ownedStockToPSV(OwnedStock ownedStock)
  {
    return
        ownedStock.getId() + "|" +
        ownedStock.getPortfolioId() + "|" +
        ownedStock.getStockSymbol() + "|" +
        ownedStock.getQuantity();
  }

  private String portfolioToPSV(Portfolio portfolio)
  {
    return
        portfolio.getId() + "|" +
        portfolio.getCurrentBalance();
  }

  private String stockPriceHistoriesToPSV(StockPriceHistory stockPriceHistory)
  {
    return
        stockPriceHistory.getId() + "|" +
        stockPriceHistory.getStockSymbol() + "|" +
        stockPriceHistory.getPrice()+ "|" +
        stockPriceHistory.getTimestamp();
  }

  private String transactionsToPSV(Transaction transaction)
  {
    return
        transaction.getId() + "|" +
        transaction.getPortfolioId() + "|" +
        transaction.getType() + "|" +
        transaction.getStockSymbol() + "|" +
        transaction.getQuantity() + "|" +
        transaction.getPricePerShare() + "|" +
        transaction.getTotalAmount() + "|" +
        transaction.getFee() + "|" +
        transaction.getTimestamp();
  }

  private Stock readStockPSV(String psv)
  {
    String[] parts = psv.split("\\|");
    return Stock.createFromStorage(parts[0], StockState.valueOf(parts[1]), new BigDecimal(parts[2]));
  }

  private OwnedStock readOwnedStockPSV(String psv)
  {
    String[] parts = psv.split("\\|");
    return new OwnedStock(UUID.fromString(parts[0]), UUID.fromString(parts[1]), parts[2], Double.parseDouble(parts[3]));
  }

  private Portfolio readPortfolioPSV(String psv)
  {
    String[] parts = psv.split("\\|");
    return new Portfolio(UUID.fromString(parts[0]), new BigDecimal(parts[1]));
  }

  private StockPriceHistory readStockPriceHistoryPSV(String psv)
  {
    String[] parts = psv.split("\\|");
    return StockPriceHistory.createFromStorage(UUID.fromString(parts[0]), parts[1], new BigDecimal(parts[2]), Instant.parse(parts[3]));
  }

  private Transaction readTransactionPSV(String psv)
  {
    String[] parts = psv.split("\\|");
    return new Transaction(UUID.fromString(parts[0]),
        UUID.fromString(parts[1]),
        TransactionType.valueOf(parts[2]),
        parts[3],
        Double.parseDouble(parts[4]),
        new BigDecimal(parts[5]),
        new BigDecimal(parts[6]),
        new BigDecimal(parts[7]),
        Instant.parse(parts[8]));
  }

  private <T> void loadEntities(String fileName, List<T> targetList, Function<String, T> parser) {
    targetList.clear();
    Path filePath = dataDirectory.resolve(fileName);
    List<String> lines = readAllLines(filePath);
    for (String line : lines) {
      if (line != null && !line.trim().isEmpty()) {
        targetList.add(parser.apply(line));
      }
    }
  }


  private void loadStocks()
  {
    stocks = new ArrayList<>();
    loadEntities("stocks.txt",stocks,this::readStockPSV);
  }

  private void loadOwnedStocks()
  {
    ownedStocks = new ArrayList<>();
    loadEntities("ownedStocks.txt",ownedStocks,this::readOwnedStockPSV);
  }

  private void loadPortfolios()
  {
    portfolios = new ArrayList<>();
    loadEntities("portfolios.txt",portfolios,this::readPortfolioPSV);
  }

  private void loadStockPriceHistories()
  {
    stockPriceHistories = new ArrayList<>();
    loadEntities("stockPriceHistories.txt",stockPriceHistories,this::readStockPriceHistoryPSV);
  }

  private void loadTransactions()
  {
    transactions = new ArrayList<>();
    loadEntities("transactions.txt",transactions,this::readTransactionPSV);
  }

  private void clearData()
  {
    stocks = null;
    ownedStocks = null;
    portfolios = null;
    stockPriceHistories = null;
    transactions = null;
  }

  private void ensureFilesExist()
  {
    final Logger logger = Logger.getInstance();
    List<String> files = List.of(
        "stocks.txt",
        "ownedStocks.txt",
        "portfolios.txt",
        "stockPriceHistories.txt",
        "transactions.txt");

    try
    {
      Files.createDirectories(dataDirectory);
    }
    catch (IOException e)
    {
      logger.log(LoggerLevel.ERROR, "Failed to create data directory: " + dataDirectory, e);
      throw new RuntimeException("Failed to create data directory: " + dataDirectory, e);
    }

    for (String fileName : files)
    {
      Path filePath = dataDirectory.resolve(fileName);
      try
      {
        if (!Files.exists(filePath))
          Files.createFile(filePath);
      }
      catch (IOException e)
      {
        logger.log(LoggerLevel.ERROR, "Failed to create file: " + filePath);
        throw new RuntimeException("Failed to create file: " + filePath, e);
      }
    }
  }
}
